[package]
name = "progressor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A modern progress tracking crate"
repository = "https://github.com/lexoliu/progressor"
keywords = ["async", "progress", "tracking", "stream"]
categories = ["asynchronous", "development-tools"]
authors = ["Lexo Liu <me@lexo.cool>"]
readme = "README.md"

[dependencies]
async-broadcast = { version = "0.7.2", optional = true }
futures-core = { version = "0.3.31", default-features = false }
pin-project-lite = { version = "0.2.16", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["time", "macros", "rt", "rt-multi-thread"] }
futures-util = "0.3"

[features]
default = ["std"]
std = ["dep:async-broadcast","dep:pin-project-lite"]

[lints]
rust.missing_docs = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"